# soft-dtw

./: CMakeLists.txt  README.rst  pyproject.toml  setup.py
sdtw/: CMakeLists.txt  soft_dtw_fast.pyx
